--- a/pet/index.html
+++ b/pet/index.html
@@ -2,15 +2,14 @@
 
 
 <head>
-<meta http-equiv=Content-Type content=text/html;charset=gb2312>
-    <meta name="description" content="petpet, petpet generator, benisland neocities org petpet, petpet gif, petpet meme">
+ <meta name="description" content="petpet, petpet generator, benisland neocities org petpet, petpet gif, petpet meme">
     <meta name="theme-color" content="#9369cf">
     <meta property="og:title" content="petpet generator">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://zoomerok.app/petpet/">
     <meta property="og:image" itemprop="image" content="images/pet.gif">
     <meta property="og:description" itemprop="description" content="petpet gif generator">
-    <title>PetPet generator 馃尀 - fast and fun</title>
+    <title>RUA</title>
     <link rel="icon" href="favicon.ico">
 
     <!-- Sanitize CSS -->
@@ -51,7 +50,7 @@
         <div class="preview-controls">
             <div class="row">
                 <div class="control-group">
-                    <label for="toggleAdjust" class="control-group-l">调整模式</label>
+                    <label for="toggleAdjust" class="control-group-l">璋冩暣妯″紡</label>
                     <label for="toggleAdjust" class="toggle-switch">
                         <input id="toggleAdjust" type="checkbox" class="toggle-switch-input">
                         <span class="toggle-switch-control"></span>
@@ -70,7 +69,7 @@
                 </label>
             </div>
             <div class="row control-group">
-                <label for="scale" class="control-label control-group-s">size</label>
+                <label for="scale" class="control-label control-group-s">灏哄</label>
                 <input id="scale" class="control-range control-group-l" type="range" step="1" min="15" max="200" value="85">
             </div>
             <div class="row control-group">
@@ -78,7 +77,7 @@
                 <input id="squish" class="control-range control-group-l" type="range" step="1" min="100" max="300" value="125">
             </div>
             <div class="row control-group">
-                <label for="fps" class="control-label control-group-s">speed</label>
+                <label for="fps" class="control-label control-group-s">甯х巼<label>
                 <input id="fps" class="control-range" type="range" step="2" min="2" max="60" value="16">
                 <input type="number" id="fpsVal" class="control control-sm" step="1" min="2" max="60" value="16">
             </div>
@@ -158,5 +157,5 @@
 </noscript>
 <!-- /Yandex.Metrika counter -->
 </body>
-<!-- 防止中文乱码 --><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!-- 锟斤拷止锟斤拷锟斤拷锟斤拷锟斤拷 --><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </html>
