--- a/tape.html
+++ b/tape.html
@@ -6,6 +6,6 @@
 			<meta name="viewport" id="viewport" content="width=640px, user-scalable=no">
 		</head>
 		<body>
-			<iframe src="https://www.tapechat.net/uu/W7N270/VGMGXGR8"></iframe>
+			<iframe src="https://mp.qzone.qq.com/u/3434364886?uin=3434364886&is_famous_space=1&brand_flag=0"></iframe>
 		</body>
 	</html>
