--- a/tape.html
+++ b/tape.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-			
-			<meta name="viewport" id="viewport" content="width=640px, user-scalable=no">
-		</head>
-		<body>
-			<iframe src="https://mp.qzone.qq.com/u/3434364886?uin=3434364886&is_famous_space=1&brand_flag=0"></iframe>
-		</body>
-	</html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<title>001</title>
+	</head>
+	<body>
+		<iframe style="width: 100%;height: 400px;" src="https://mp.qzone.qq.com/u/3434364886?uin=3434364886&is_famous_space=1&brand_flag=0";></iframe>
+	</body>
+</html>
