--- a/tape.html
+++ b/tape.html
@@ -5,6 +5,6 @@
 		<title>001</title>
 	</head>
 	<body>
-		<iframe style="width: 100%;height: 400px;" src="https://mp.qzone.qq.com/u/3434364886?uin=3434364886&is_famous_space=1&brand_flag=0";></iframe>
+		<iframe style="width: 100%;height: 400px;" src="https://baidu.com";></iframe>
 	</body>
 </html>
