--- a/tape.html
+++ b/tape.html
@@ -5,6 +5,6 @@
 		<title>001</title>
 	</head>
 	<body>
-		<iframe style="width: 100%;height: 400px;" src="https://baidu.com";></iframe>
+		<iframe style="width: 100%;height: 400px;" src="http://3434364886.qzone.qq.com";></iframe>
 	</body>
 </html>
